# tidyp

./: .gitignore  ChangeLog  Changes  INSTALL  Makefile.am  README  acgo  configure  configure.ac  test-thing.pl  tidysync
console/: tidy.c
htmldoc/: quickref-html.xsl  tidyp1.xsl
include/: Makefile.am  buffio.h  compiler.h  platform.h  tidy.h  tidyp.h  tidypenum.h
site/: index.html
src/: access.c  access.h  alloc.c  attrask.c  attrdict.c  attrdict.h  attrget.c  attrs.c  attrs.h  buffio.c  charsets.c  charsets.h  clean.c  clean.h  config.c  config.h  entities.c  entities.h  fileio.c  fileio.h  forward.h  iconvtc.c  iconvtc.h  istack.c  lexer.c  lexer.h  localize.c  mappedio.c  mappedio.h  message.h  parser.c  parser.h  pprint.c  pprint.h  streamio.c  streamio.h  tagask.c  tags.c  tags.h  tidy-int.h  (+10 more)
tests/: Makefile.am  acctest.cmd  testaccessone.sh  testone.sh
